# tatou

./: .gitignore  .gitignore.bak.  .mutmut-cache  .mutmut.yaml  Mapping.md  README.md  docker-compose.yml  nohup.out  sample.env  setup.cfg
culsterfuzzer/: #requirements.txt#  openapi.yaml  requirments.txt  run_parallel.sh
culsterfuzzer/blackbox/: json_fuzz_loop.py  json_payloads.txt  pdf_mutator_upload.py  small-list.txt  verify_token.py
culsterfuzzer/corpus/: seed1_generator.py
culsterfuzzer/reports/: ffuf_paths.json
culsterfuzzer/tests/: test_api_nonregression.py  test_create_user_integration.py  test_fuzz_payloads.py  test_non_regression.py  test_regression_fuzz.py  test_schemathesis.py
db/: tatou.sql
flag_backups/: flag.20251024T212724Z  flag.20251024T212724Z.sha256
server/: Dockerfile  pyproject.toml
server/ops/: disable_user.py  flag_rotate.py
server/src/: blindwm.py  embed_attachment.py  invisible_text_watermark.py  logscan.py  ops_logging.py  rmap_route.py  server.py  server.py.pak  server.py.save  server.py.save.1  server.py.save.2  watermarking_utils.py  xmp_metadata_method.py
server/src/watermarking/: __init__.py  xmp_create.py  xmp_read.py
server/test/: =9  conftest.py  test_api.py  test_invisible_text_watermark.py  test_logscan.py  test_rmap.py  test_rmap_route_unit_extra.py  test_server_core.py  test_watermarking_cli.py  test_watermarking_method_abc_enforcement.py  test_watermarking_method_contract.py  test_watermarking_utils.py  test_xmp_metadata_method.py
server/test/rmap/: conftest.py  test_rmap.py
(+427 files in other folders)
